# SleepClock

./: .gitignore  CMakeLists.txt  README.md
data/: png_to_ssd1306.R
hardware/: sleepclock.FCStd  sleepclock_body.stl  sleepclock_lid.stl
src/: EddyClock.cpp  EddyClock.h  button.cpp  button.h  main.cpp  oled_static_data.c  oled_static_data.h  rv3028.cpp  rv3028.h  ssd1306.cpp  ssd1306.h  utils.c  utils.h
